lab1/Test/L1-A-12-84.output
Error Type A at Line 5
Error Type B at Line 16
Error Type A at Line 30
Error Type A at Line 34
