lab1/Test/L1-A-12-84.cmm
struct t03eW04aC ;
int LRcnHYaJzcj , o7xyXGU7 [ 243853689 ] 

;
float i90YYeO :( ) {
}
int ;
int CXXRHvb8iXI74Aj 
;
struct cVrOAByCWE7lnB_ {
  int wevhFBUEPICNXrve7Mke , _KyvsDrG_7vO ;
  struct zQJfcxE5bfaZ2Yq2nYj Kq = G_xS9N9PzDtTV_S7R 
    = kUKgp4A9TBfFW5IF <= I97KA - z_x68Yqbpn0gA_ * ( nrilCZr_R1QDcxs6z 
    = Nso2hcXI_Hb || r && tZ1KVP > n21gCMSRXOFWOM / ! 
    - E3Goov87ffYkTmELy ( bZwPOZo , poSJ2ty6U != mjdj6sE0QRq6KGrS 
    / - ! - [ j < ( AFjm97eXPUdp1V == oKBfPGHpFVXxEIhe 
    >= ! - ! ! - - MMYvNkfV1DVpoBg26ic4 . eHcm8l ) / 1101432794 
    - 1602737403.524788342 . HGy || eYG6r9MJie41Ljlgl 
    . MwNvNcg7 ] + ! TjlyJgAhn6WI ( ) ) ) . Z ;
};
int ;
struct {
  struct HFVCPAGJbjF0XyA1Q FBsGDSWr ;
}N8q2J8ck5CmC 
;
struct LHpqX_6zIuCrRJNUbwYi ;
int ;
int lY3WoMI ( ) {
}
int C ( int Tl5h5X , int @dJSkjsZR ) {
  C2WJC ;
}
int ;
int `zGWUcnN61 ( ) {
  if ( nBiwMpVktIdiBEvMm4 )   if ( La0fZ2WT )   kuMxQUwnw8wth6fVatE 
    ;
else   while ( T1u ) {
  }

else   if ( WFST_A )   return PCqqFZLIBbVI1mkEhc ;


}
int ;
